# shitty_cpu

./: Cargo.toml  Justfile  REAMDE.md  bench.sh  bench2.sh  script.shitty  test.s
crates/shitty_cli/: Cargo.toml
crates/shitty_cli/src/: main.rs
crates/shitty_file_format/: Cargo.toml
crates/shitty_file_format/src/: lib.rs
crates/shitty_parser/: Cargo.toml
crates/shitty_parser/src/: lib.rs
crates/shitty_runtime/: Cargo.toml
crates/shitty_runtime/src/: lib.rs
crates/shitty_script/: Cargo.toml  script.pest
crates/shitty_script/src/: ast.rs  convert.rs  lib.rs  parser.rs
crates/shitty_types/: Cargo.toml
crates/shitty_types/src/: lib.rs
scripts/: factorial.s  fibonacci.s  hello_world.s  random.s  square_root.s
