[package]
name = "shitty_file_format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
serde = { version = "1.0.204", features = ["derive"] }
shitty_types = { path = "../shitty_types" }

[dev-dependencies]
maplit = "1.0.2"
