[package]
name = "shitty_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2.15"
shitty_types = { path = "../shitty_types" }

[dependencies.educe]
version = "0.6.0"
features = ["Debug"]
default-features = false


[dev-dependencies]
maplit = "1.0.2"
