[package]
name = "shitty_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
from-pest = "0.3.2"
pest = "2.7.11"
pest-ast = "0.3.4"
pest_derive = "2.7.11"
shitty_types = { path = "../shitty_types" }
